Added SITENAME to all the relevant sections

--- a/deploy_tools/systemd.template.gunicorn.service
+++ b/deploy_tools/systemd.template.gunicorn.service
@@ -5,8 +5,8 @@ After=network.target
 [Service]
 User=pi
 Group=pi
-WorkingDirectory=/home/pi/sites/lists.scientistlearnscode.co.uk/source
-ExecStart=/home/pi/sites/lists.scientistlearnscode.co.uk/virtualenv/bin/gunicorn --bind unix:/home/pi/sites/lists.scientistlearnscode.co.uk.socket superlists.wsgi:application
+WorkingDirectory=/home/pi/sites/SITENAME/source
+ExecStart=/home/pi/sites/SITENAME/virtualenv/bin/gunicorn --bind unix:/home/pi/sites/SITENAME.socket superlists.wsgi:application
 
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
